# fehstatsim-v2

./: .gitignore  Cargo.toml  deploy-prod.sh  deploy-staging.sh
dioxus_frontend/: Cargo.toml  Dioxus.toml  index.html
dioxus_frontend/src/: worker.rs
egui_frontend/: Cargo.toml  Trunk.toml  index.html
egui_frontend/src/: app.rs  banner.rs  goal.rs  lib.rs  results.rs
summon_simulator/: Cargo.toml
summon_simulator/benches/: sim.rs
summon_simulator/src/: banner.rs  frequency_counter.rs  goal.rs  lib.rs  sim.rs  types.rs  weightedindex.rs
sycamore_frontend/: Cargo.toml  index.html
sycamore_frontend/src/: app.rs  banner.rs  goal.rs  lib.rs
yew_frontend/: Cargo.toml  index.html
yew_frontend/src/: agent.rs  app.rs  banner.rs  lib.rs  results.rs
yew_frontend/src/components/: select.rs  toggle.rs
