[package]
name = "dioxus_frontend"
version = "0.1.0"
authors = ["Minno <>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3.2"
dioxus-web = "0.3.1"

log = "0.4.17"

# WebAssembly Debug
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.152", features = ["derive"] }
gloo-worker = "0.2.1"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
summon_simulator = { version = "*", path = "../summon_simulator" }
gloo-timers = "0.2.6"
enumset = "1.0.12"
gloo-console = "0.2.3"