[package]
name = "egui_frontend"
version = "0.1.0"
authors = []
edition = "2021"

[dependencies]
egui = "0.27.2"
eframe = "0.27.2"
gloo-worker = "0.5.0"
summon_simulator = { version = "*", path = "../summon_simulator" }
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.34"
console_error_panic_hook = "0.1.7"
enumset = "1.0.12"
gloo-console = "0.3.0"
serde = { version = "1.0.152", features = ["derive"] }
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
gloo-timers = "0.3.0"
egui_extras = "0.27.2"
gloo-net = "0.5.0"
