[package]
name = "summon_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "sim"
harness = false

[dependencies]
enumset = "1.0.12"
itertools = "0.10.5"
rand = "0.8.5"
