[package]
name = "summon_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "sim"
harness = false

[dependencies]
enumset = "1.0.12"
fxhash = "0.2.1"
itertools = "0.10.5"
memoize = "0.4.0"
rand = { version ="0.8.5", features = ["small_rng"] }
rand_xoshiro = "0.6.0"
