[package]
name = "summon_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "sim"
harness = false

[dependencies]
enumset = { version = "1.0.12", features = ["serde"] }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
serde = { version = "1.0.152", features = ["derive"] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2.8", features = ["js"] }
