[package]
name = "sycamore_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = "0.8.2"
summon_simulator = { version = "*", path = "../summon_simulator" }
enumset = "1.0.12"
gloo-worker = "0.2.1"
gloo-console-timer = "0.1.0"
console_error_panic_hook = "0.1.7"
