[package]
name = "yew_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
enumset = "1.0.12"
gloo-console = "0.2.3"
gloo-timers = "0.2.6"
gloo-worker = "0.2.1"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
serde = { version = "1.0.158", features = ["derive"] }
summon_simulator = { version = "*", path = "../summon_simulator" }
yew = { version = "0.20.0", features = ["csr"] }
yew-agent = "0.2.0"
